--- a/templates/base.html
+++ b/templates/base.html
@@ -17,7 +17,7 @@
         {% endblock %}
     </header>
 
-    <div class="container">
+    <div class="content">
         {% block content %}
         {% endblock %}
     </div>
