--- a/static/base.css
+++ b/static/base.css
@@ -1,16 +1,87 @@
 header {
-    background-color: rgb(3, 1, 32);
-    color: rgb(227, 227, 2);
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 232, 31);
+    padding: 24px;
+}
+
+h1 {
+    margin: 0;
+    margin-bottom: 12px;
+    font-size: 42px;
+}
+
+h2 {
+    font-size: 32px;
+    color: rgb(0, 0, 0);
+    margin: 0;
+    padding-bottom: 16px;
+}
+
+h3 {
+    font-size: 24px;
+    margin: 0;
+    padding-bottom: 16px;
+}
+
+h4 {
+    font-size: 20px;
+    margin: 0;
+    padding-bottom: 8px;
+}
+
+p {
+    font-size: 18px;
+    margin: 0;
+    padding-bottom: 4px;
 }
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    background-color: rgb(246, 246, 228);
+    background-color: lightgrey;
+    color: rgb(0, 0, 0);
+    min-height: 100vh;
+    display: grid;
+    grid-template-rows: auto 1fr auto;
+}
+
+.content {
+    padding: 32px;
+}
+
+.homepage-buttons {
+    padding-top: 16px;
+    padding-bottom: 32px;
+}
+
+.homepage-buttons > input {
+    font-size: 32px;
+    font-weight: bold;
+    background-color: rgb(243, 243, 243);
+    width: 500px;
+    height: 100px;
+    border-color: black;
+    border-radius: 20px;
+    border-width: 6px;
+    cursor: pointer;
 }
 
 footer {
-    background-color: rgb(3, 1, 32);
-    color: rgb(227, 227, 2);
+    background-color: rgb(0, 0, 0);
+    color: rgb(255, 232, 31);
+    padding: 24px;
 }
 
+.footer-menu {
+    display: flex;
+    gap: 32px;
+    margin: 0;
+    list-style: none;
+    padding-left: 0;
+}
+
+.footer-menu > li > a {
+    color: rgb(255, 232, 31);
+    font-size: 18px;
+    margin: 0;
+}
 
