--- a/templates/base.html
+++ b/templates/base.html
@@ -6,7 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
-    <title>Droid Workshop</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='technicians.css') }}">
+    <title>Droid Repair Workshop</title>
 </head>
 
 <body>
@@ -22,16 +23,16 @@
         {% endblock %}
     </div>
 
-</body>
+    <footer>
+        <nav>
+            <ul class="footer-menu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/technicians">All Technicians</a></li>
+                <li><a href="/droids">All Droids</a></li>
+            </ul>
+        </nav>
+    </footer>
 
-<footer>
-    <nav>
-        <ul class="menu">
-            <li><a href="/">Home</a></li>
-            <li><a href="/technicians">All Technicians</a></li>
-            <li><a href="/droids">All Droids</a></li>
-        </ul>
-    </nav>
-</footer>
+</body>
 
 </html>
