--- a/templates/index.html
+++ b/templates/index.html
@@ -1,23 +1,12 @@
 {% extends "base.html" %}
 
-{% block subheader %}
-
-    <h1></h1>
-
-{% endblock %}
-
-
 {% block content %}
 
-    <article>
-        <p>Add some generic intro text here.....</p>
-    </article>
-
-    <form action="/technicians" class="homepage_buttons">
+    <form action="/technicians" class="homepage-buttons">
         <input type="submit" value="View Technicians">
     </form>
 
-    <form action="/droids" class="homepage_buttons">
+    <form action="/droids" class="homepage-buttons">
         <input type="submit" value="View Droids">
     </form>
 
