--- a/templates/base.html
+++ b/templates/base.html
@@ -14,8 +14,13 @@
 
     <header>
         <h1>Droid Repair Workshop</h1>
-        {% block subheader %}
-        {% endblock %}
+        <nav>
+            <ul class="header-menu">
+                <li><a href="/">Home</a></li>
+                <li><a href="/technicians">All Technicians</a></li>
+                <li><a href="/droids">All Droids</a></li>
+            </ul>
+        </nav>
     </header>
 
     <div class="content">
@@ -24,13 +29,7 @@
     </div>
 
     <footer>
-        <nav>
-            <ul class="footer-menu">
-                <li><a href="/">Home</a></li>
-                <li><a href="/technicians">All Technicians</a></li>
-                <li><a href="/droids">All Droids</a></li>
-            </ul>
-        </nav>
+        <p>&copy; Louise Cuthbertson</p>
     </footer>
 
 </body>
