--- a/templates/technicians/show.html
+++ b/templates/technicians/show.html
@@ -8,11 +8,11 @@
 
     <div class="show-buttons">
         <form action="/technicians/{{technician.id}}/edit">
-            <input type="submit" value="Update Details">
+            <input type="submit" value="Update Details" class="buttons">
         </form>
 
         <form action="/technicians/{{technician.id}}/delete", method="post">
-            <input type="submit" value="Delete">
+            <input type="submit" value="Delete" class="buttons">
         </form>
     </div>
 
