--- a/templates/technicians/edit.html
+++ b/templates/technicians/edit.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <form action="/technicians/{{technician.id}}/show" method="post">
+    <form action="/technicians/{{technician.id}}/show" method="post" class="techs-form">
 
         <label for="name">Name:</label>
             <input type="text" id="name" name="name" value="{{technician.name}}" required autofocus>
@@ -15,10 +15,10 @@
                         {{type.name}}</option>
                 {% endfor %}
             </select>
-
+        
         <label for="picture">Link to picture:</label>
             <input type="text" id="picture" name="picture" value="{{technician.picture}}">
-
+        
         <button type="submit">Update Details</button>
 
     </form>
