creation of droids_controller file

--- a/templates/base.html
+++ b/templates/base.html
@@ -21,6 +21,7 @@
                 <li><a href="/droids">All Droids</a></li>
             </ul>
         </nav>
+        <!-- <img src="logo.png" alt="Logo of robot with medical cross"> -->
     </header>
 
     <div class="content">
