--- a/templates/base.html
+++ b/templates/base.html
@@ -21,7 +21,7 @@
                 <li><a href="/droids">All Droids</a></li>
             </ul>
         </nav>
-        <!-- <img src="logo.png" alt="Logo of robot with medical cross"> -->
+        <img src="/static/images/logo.png" alt="Logo of robot with medical cross" width="80px" height="80px">
     </header>
 
     <div class="content">
