--- a/static/technicians.css
+++ b/static/technicians.css
@@ -1,18 +1,7 @@
-.all-techs-header {
-    display: flex;
-    gap: 24px ;
-    align-items: center;
-    padding-bottom: 18px;
-}
-
-.all-techs-header > h2 {
-    padding: 0;
-}
-
 .all-techs {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-between;
+    justify-content: flex-start;
     gap: 48px;
 }
 
@@ -40,24 +29,6 @@
     padding: 12px;
     padding-top: 0;
     margin: 0;
-}
-
-.show-buttons {
-    padding-top: 16px;
-    padding-bottom: 24px;
-    display: flex;
-    gap: 8px;
-}
-
-.buttons {
-    font-size: 16px;
-    background-color: rgb(243, 243, 243);
-    height: 40px;
-    width: 175px;
-    border-color: black;
-    border-radius: 6px;
-    border-width: 2px;
-    cursor: pointer;
 }
 
 .droids-assigned {
