--- a/templates/technicians/index.html
+++ b/templates/technicians/index.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 
-    <div class="all-techs-header">
+    <div class="section-header">
         <h2>All Technicians</h2>
         <form action="/technicians/new">
             <input type="submit" value="Add New Technician" class="buttons">
