--- a/templates/base.html
+++ b/templates/base.html
@@ -7,6 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="{{ url_for('static', filename='base.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='technicians.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='droids.css') }}">
     <title>Droid Repair Workshop</title>
 </head>
 
