added edit droid and owner html and css

--- a/static/droids.css
+++ b/static/droids.css
@@ -61,3 +61,43 @@
         'droid-notes droid-notes' 1fr / 1fr 320px;
     
 }
+
+.droids-form {
+    font-size: 18px;
+    color: rgb(0, 0, 0);
+    display: grid;
+    grid-template: 40px 40px 40px 40px 40px 40px/ 150px 350px;
+    gap: 12px;
+    align-items: center;
+}
+
+.droids-form > input {
+    font-size: 16px;
+    background-color: rgb(243, 243, 243); 
+    padding: 8px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(0, 0, 0);
+    border-radius: 6px;
+}
+
+.droids-form > select {
+    font-size: 16px;
+    background-color: rgb(243, 243, 243); 
+    padding: 8px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(0, 0, 0);
+    border-radius: 6px;
+}
+
+.droids-form > button {
+    font-size: 16px;
+    background-color: rgb(243, 243, 243); 
+    padding: 8px;
+    width: 512px;
+    border-style: solid;
+    border-width: 2px;
+    border-color: rgb(0, 0, 0);
+    border-radius: 6px;
+}
