--- a/templates/technicians/edit.html
+++ b/templates/technicians/edit.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+    <h3>Update Technician Details</h3>
+
     <form action="/technicians/{{technician.id}}/show" method="post" class="techs-form">
 
         <label for="name">Name:</label>
