--- a/templates/technicians/new.html
+++ b/templates/technicians/new.html
@@ -2,6 +2,8 @@
 
 {% block content %}
 
+    <h3>Add A New Technician</h3>   
+
     <form action="/technicians" method="post" class="techs-form">
 
         <label for="name">Name:</label>
