--- a/static/droids.css
+++ b/static/droids.css
@@ -66,7 +66,7 @@
     font-size: 18px;
     color: rgb(0, 0, 0);
     display: grid;
-    grid-template: 40px 40px 40px 40px 40px 40px/ 150px 350px;
+    grid-template: 40px 40px 40px 40px 40px 40px/ 150px 450px;
     gap: 12px;
     align-items: center;
 }
@@ -95,9 +95,10 @@
     font-size: 16px;
     background-color: rgb(243, 243, 243); 
     padding: 8px;
-    width: 512px;
+    width: 612px;
     border-style: solid;
     border-width: 2px;
     border-color: rgb(0, 0, 0);
     border-radius: 6px;
+    cursor: pointer;
 }
