updated to include date variables

--- a/templates/droids/edit.html
+++ b/templates/droids/edit.html
@@ -28,7 +28,7 @@
             </select>   
 
         <label for="reg_date">Registration Date:</label>
-            <input type="text" id="reg_date" name="reg_date" value="{{droid.registration_date}}">
+            <input type="date" id="reg_date" name="reg_date" value="{{droid.registration_date}}">
         
         <label for="notes">Repair Notes:</label>
             <input type="text" id="notes" name="notes" value="{{droid.repair_notes}}">
