--- a/templates/droids/show.html
+++ b/templates/droids/show.html
@@ -8,6 +8,7 @@
             <p> <b>Type:</b> {{droid.type.name}} Droid</p>
             <p> <b>Technician:</b> {{droid.technician.name}}</p>
             <p> <b>Registration Date:</b> {{droid.registration_date}}</p>
+            <p> <b>Age of Droid:</b> {{droid_age}}</p>
 
             <div class="show-buttons">
                 <form action="/droids/{{droid.id}}/edit">
