--- a/templates/droids/new.html
+++ b/templates/droids/new.html
@@ -17,7 +17,7 @@
             </select>
 
         <label for="reg_date">Registration Date:</label>
-            <input type="text" id="reg_date" name="reg_date" placeholder="Registration date">
+            <input type="date" id="reg_date" name="reg_date" placeholder="Registration date">
 
         <label for="owner">Owner:</label>
             <select id="owner" name="owner_id">
