added images to html and updates to css

--- a/static/droids.css
+++ b/static/droids.css
@@ -14,14 +14,18 @@
     border-radius: 30px;
     text-decoration: none;
     padding: 12px;
-    height: 350px;
+    height: 325px;
     width: 350px;
     cursor: pointer;
 }
 
 .single-droid > img {
-    align-self: center;
     padding: 12px;
+    padding-bottom: 24px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .single-droid > p {
