--- a/templates/base.html
+++ b/templates/base.html
@@ -15,7 +15,7 @@
 <body>
 
     <header>
-        <h1>Droid Repair Workshop</h1>
+        <h1>Nuts 'n' Bots Repair Bay</h1>
         <nav>
             <ul class="header-menu">
                 <li><a href="/">Home</a></li>
