--- a/static/technicians.css
+++ b/static/technicians.css
@@ -14,14 +14,18 @@
     border-radius: 30px;
     text-decoration: none;
     padding: 12px;
-    height: 300px;
+    height: 275px;
     width: 250px;
     cursor: pointer;
 }
 
 .single-tech > img {
-    align-self: center;
     padding: 12px;
+    padding-bottom: 24px;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
 }
 
 .single-tech > p {
@@ -42,6 +46,7 @@
 .droid-assignee {
     color: rgb(0, 0, 0);
     background-color: rgb(243, 243, 243); 
+    text-decoration: none;
     border-style: solid;
     border-width: 3px;
     border-color: rgb(0, 0, 0);
@@ -56,7 +61,7 @@
     font-size: 18px;
     color: rgb(0, 0, 0);
     display: grid;
-    grid-template: 40px 40px 40px 40px/ 125px 375px;
+    grid-template: 40px 40px 40px / 125px 375px;
     gap: 12px;
     align-items: center;
 }
