improved date functionality

--- a/templates/droids/edit.html
+++ b/templates/droids/edit.html
@@ -27,8 +27,8 @@
                 {% endfor %}
             </select>   
 
-        <label for="reg_date">Registration Date:</label>
-            <input type="date" id="reg_date" name="reg_date" value="{{droid.registration_date}}">
+        <label for="activation_date">Activation Date:</label>
+            <input type="date" id="activation_date" name="activation_date" value="{{droid.activation_date}}">
         
         <label for="notes">Repair Notes:</label>
             <input type="text" id="notes" name="notes" value="{{droid.repair_notes}}">
