--- a/templates/droids/index.html
+++ b/templates/droids/index.html
@@ -17,7 +17,7 @@
             <img src="{{droid.type.picture}}" alt="Logo for {{droid.type.name}} Droid" height="150px" width="150px">
             <p><b>Name:</b> {{droid.name}}</p>
             <p><b>Type:</b> {{droid.type.name}} Droid</p>
-            <p><b>Registration Date:</b> {{droid.registration_date}}</p>
+            <p><b>Activation Date:</b> {{droid.change_date_format()}}</p>
             <p><b>Owner:</b> {{droid.owner.name}}, {{droid.owner.home_planet}}</p>
         </a>
 
