--- a/templates/droids/new_further_info.html
+++ b/templates/droids/new_further_info.html
@@ -33,7 +33,7 @@
         <!-- Hidden inputs to allow recapture of new droid data from initial 'Add Droid' form -->
         <input type="hidden" name="droid_name" value="{{droid.name}}">
         <input type="hidden" name="droid_type_id" value="{{droid.type.id}}">
-        <input type="hidden" name="reg_date" value="{{droid.registration_date}}">
+        <input type="hidden" name="activation_date" value="{{droid.activation_date}}">
         <input type="hidden" name="notes" value="{{droid.repair_notes}}">
         <input type="hidden" name="num_of_techs" value="{{relevant_techs|length}}">
         <!-- <input type="hidden" name="relevant_techs" value={{relevant_techs}}> -->
