--- a/templates/owners/edit.html
+++ b/templates/owners/edit.html
@@ -12,7 +12,7 @@
         <label for="home_planet">Home Planet:</label>
             <input type="text" id="home_planet" name="home_planet" value="{{owner.home_planet}}">
         
-        <label for="comlink_freq">Home Planet:</label>
+        <label for="comlink_freq">Comlink Frequency:</label>
             <input type="number" id="comlink_freq" name="comlink_freq" value="{{owner.comlink_frequency}}">
         
         <button type="submit">Update Details</button>
