--- a/templates/droids/new.html
+++ b/templates/droids/new.html
@@ -16,8 +16,8 @@
                 {% endfor %}
             </select>
 
-        <label for="reg_date">Registration Date:</label>
-            <input type="date" id="reg_date" name="reg_date" placeholder="Registration date">
+        <label for="activation_date">Activation Date:</label>
+            <input type="text" id="activation_date" name="activation_date" placeholder="Activation Date" onfocus="(this.type='date', this.value='{{current_date}}')">
 
         <label for="owner">Owner:</label>
             <select id="owner" name="owner_id">
