--- a/templates/droids/show.html
+++ b/templates/droids/show.html
@@ -7,8 +7,8 @@
 
             <p> <b>Type:</b> {{droid.type.name}} Droid</p>
             <p> <b>Technician:</b> {{droid.technician.name}}</p>
-            <p> <b>Registration Date:</b> {{droid.registration_date}}</p>
-            <p> <b>Age of Droid:</b> {{droid_age}}</p>
+            <p> <b>Activation Date:</b> {{droid.change_date_format()}}</p>
+            <p> <b>Years Active:</b> {{droid.calculate_years_active()}}</p>
 
             <div class="show-buttons">
                 <form action="/droids/{{droid.id}}/edit">
