updated to include unassigned droids button and page

--- a/static/droids.css
+++ b/static/droids.css
@@ -107,6 +107,10 @@
     cursor: pointer;
 }
 
+.droids-form > h4 {
+    padding-top: 10px;
+}
+
 #activation_date {
     font-family: Arial, Helvetica, sans-serif;
 }
