--- a/templates/base.html
+++ b/templates/base.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='technicians.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='droids.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='owners.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='notes.css') }}">
     <title>Droid Repair Workshop</title>
 </head>
 
