added services functionality

--- a/templates/base.html
+++ b/templates/base.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='droids.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='owners.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='notes.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='services.css') }}">
     <title>Droid Repair Workshop</title>
 </head>
 
@@ -22,6 +23,7 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/technicians">All Technicians</a></li>
                 <li><a href="/droids">All Droids</a></li>
+                <li><a href="/services">All Services</a></li>
             </ul>
         </nav>
         <img src="/static/images/logo.png" alt="Logo of robot with medical cross" width="80px" height="80px">
