--- a/templates/index.html
+++ b/templates/index.html
@@ -3,11 +3,15 @@
 {% block content %}
 
     <form action="/technicians" class="homepage-buttons">
-        <input type="submit" value="View Technicians">
+        <input type="submit" value="Technicians">
     </form>
 
     <form action="/droids" class="homepage-buttons">
-        <input type="submit" value="View Droids">
+        <input type="submit" value="Droids">
+    </form>
+
+    <form action="/services" class="homepage-buttons">
+        <input type="submit" value="Services">
     </form>
 
 {% endblock %}
