--- a/templates/services/index.html
+++ b/templates/services/index.html
@@ -29,7 +29,7 @@
             </form>
 
             <form action="/services/{{service.id}}/delete" method="post">
-                <input type="submit" value="Delete Service" class="buttons">
+                <input type="submit" value="Delete Service" class="buttons-delete">
             </form>
 
         </div>
