--- a/templates/technicians/show.html
+++ b/templates/technicians/show.html
@@ -12,7 +12,7 @@
         </form>
 
         <form action="/technicians/{{technician.id}}/delete", method="post">
-            <input type="submit" value="Delete" class="buttons">
+            <input type="submit" value="Delete" class="buttons-delete">
         </form>
     </div>
 
