--- a/static/base.css
+++ b/static/base.css
@@ -14,6 +14,9 @@ header {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 232, 31);
     padding: 24px;
+    border-color: black;
+    border-radius: 20px;
+    border-width: 6px;
     display: grid;
     grid-template-areas: 
         'heading logo'
@@ -99,7 +102,10 @@ body {
 footer {
     background-color: rgb(0, 0, 0);
     color: rgb(255, 232, 31);
-    padding: 24px;
+    padding: 12px;
+    border-color: black;
+    border-radius: 20px;
+    border-width: 6px;
     text-align: center;
 }
 
@@ -136,9 +142,33 @@ footer {
     cursor: pointer;
 }
 
+.buttons-delete {
+    font-size: 16px;
+    color: rgb(243, 243, 243);
+    background-color: rgb(56, 16, 16);
+    height: 40px;
+    width: 175px;
+    border-color: black;
+    border-radius: 6px;
+    border-width: 2px;
+    cursor: pointer;
+}
+
 .mini-buttons {
     font-size: 12px;
     background-color: rgb(243, 243, 243);
+    height: 20px;
+    width: 50px;
+    border-color: black;
+    border-radius: 6px;
+    border-width: 2px;
+    cursor: pointer;
+}
+
+.mini-buttons-delete {
+    font-size: 12px;
+    color: rgb(243, 243, 243);
+    background-color: rgb(56, 16, 16);
     height: 20px;
     width: 50px;
     border-color: black;
