--- a/templates/base.html
+++ b/templates/base.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='owners.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='notes.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='services.css') }}">
-    <title>Droid Repair Workshop</title>
+    <title>Nuts 'n' Bots</title>
 </head>
 
 <body>
@@ -36,7 +36,7 @@
     </div>
 
     <footer>
-        <p>&copy; Louise Cuthbertson</p>
+        <p>Developed by Louise Cuthbertson on behalf of Nuts 'n' Bots Repair Bay, December 1062</p>
     </footer>
 
 </body>
