--- a/templates/owners/edit.html
+++ b/templates/owners/edit.html
@@ -15,6 +15,8 @@
         <label for="comlink_freq">Comlink Frequency:</label>
             <input type="number" id="comlink_freq" name="comlink_freq" value="{{owner.comlink_frequency}}">
         
+        <input type="hidden" name="droid_id" value={{droid_id}}>
+        
         <button type="submit">Update Details</button>
 
     </form>
