Tidied up controllers files

--- a/templates/droids/edit.html
+++ b/templates/droids/edit.html
@@ -4,7 +4,7 @@
 
     <h3>Update Droid Details</h3>
 
-    <form action="/droids/{{droid.id}}/show" method="post" class="droids-form">
+    <form action="/droids/{{droid.id}}/edit" method="post" class="droids-form">
 
         <label for="name">Name:</label>
             <input type="text" id="name" name="name" value="{{droid.name}}" required autofocus>
