--- a/templates/services/edit.html
+++ b/templates/services/edit.html
@@ -4,7 +4,7 @@
 
     <h3>Update Service Details</h3>
 
-    <form action="/services/{{service.id}}/show" method="post" class="services-form">
+    <form action="/services/{{service.id}}/edit" method="post" class="services-form">
 
         <label for="name">Name:</label>
             <input type="text" id="name" name="name" value="{{service.name}}" required autofocus>
