--- a/templates/services/new.html
+++ b/templates/services/new.html
@@ -4,7 +4,7 @@
 
     <h3>Add A New Service</h3>   
 
-    <form action="/services" method="post" class="services-form">
+    <form action="/services/new" method="post" class="services-form">
 
         <label for="name">Name:</label>
             <input type="text" id="name" name="name" placeholder="Name" required autofocus>
