--- a/templates/technicians/edit.html
+++ b/templates/technicians/edit.html
@@ -4,7 +4,7 @@
 
     <h3>Update Technician Details</h3>
 
-    <form action="/technicians/{{technician.id}}/show" method="post" class="techs-form">
+    <form action="/technicians/{{technician.id}}/edit" method="post" class="techs-form">
 
         <label for="name">Name:</label>
             <input type="text" id="name" name="name" value="{{technician.name}}" required autofocus>
