--- a/templates/technicians/new.html
+++ b/templates/technicians/new.html
@@ -4,7 +4,7 @@
 
     <h3>Add A New Technician</h3>   
 
-    <form action="/technicians" method="post" class="techs-form">
+    <form action="/technicians/new" method="post" class="techs-form">
 
         <label for="name">Name:</label>
             <input type="text" id="name" name="name" placeholder="Name" required autofocus>
