--- a/templates/owners/edit.html
+++ b/templates/owners/edit.html
@@ -4,7 +4,7 @@
 
     <h3>Update Owner Details</h3>
 
-    <form action="/owners/{{owner.id}}/show" method="post" class="owners-form">
+    <form action="/droids/{{droid_id}}/owner/{{owner.id}}/edit" method="post" class="owners-form">
 
         <label for="name">Name:</label>
             <input type="text" id="name" name="name" value="{{owner.name}}" required>
@@ -14,8 +14,6 @@
         
         <label for="comlink_freq">Comlink Frequency:</label>
             <input type="number" id="comlink_freq" name="comlink_freq" value="{{owner.comlink_frequency}}">
-        
-        <input type="hidden" name="droid_id" value={{droid_id}}>
         
         <button type="submit">Update Details</button>
 
